--- a/python_basico.ipynb
+++ b/python_basico.ipynb
@@ -8,7 +8,7 @@
         "JaqbS92plpXB"
       ],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyPUmpiOL0JStm9W9hzk2pJb",
+      "authorship_tag": "ABX9TyPhdQcSj0pCpu5CwF6/npRH",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -46,11 +46,15 @@
       "source": [
         "#Tipos de dados\n",
         "\n",
-        "#Strings (str): texto\n",
-        "#Number (int): número inteiro\n",
-        "#Float: número real com fração\n",
-        "#Complex: número complexo. Exemplo: x + yj = z\n",
-        "#Bool: verdadeiro ou falso"
+        "Strings (str): texto\n",
+        "\n",
+        "Number (int): número inteiro\n",
+        "\n",
+        "Float: número real com fração\n",
+        "\n",
+        "Complex: número complexo. Exemplo: x + yj = z\n",
+        "\n",
+        "Bool: verdadeiro ou falso"
       ],
       "metadata": {
         "id": "6hThbeMwRlJ5"
